app/styles/elements/_currently-playing.scss
.currently-playing {

  .currently-playing-artwork-container {
    position: relative;
    width: 100%;
    height: 200px;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .currently-playing-image-background {
    z-index: 0;
    position: absolute;
    top: 0;
    right: 0;
    bottom: -100px;
    left: 0;
    @include background-cover();
    transform: scale(1.5);
    filter: blur(30px);
  }

  .currently-playing-video,
  .currently-playing-artwork {
    z-index: 1;
    position: relative;
    box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.2);
  }

  .currently-playing-artwork {
    display: none;
    width: 140px;
    height: 140px;
    @include background-cover();
  }

  .currently-playing-song-info-container {
    z-index: 1;
    position: relative;
    margin-bottom: $half-space * 1.5;
  }

  .currently-playing-song-artist,
  .currently-playing-song-title {
    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
  }

  .currently-playing-song-artist {
    color: $white;
  }

  .currently-playing-song-title {
    color: $grey-900;
  }

  .currently-playing-menu-button,
  .currently-playing-upvote-button,
  .currently-playing-downvote-button {
    cursor: pointer;
    color: rgba($white, 0.5);
    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
  }

  .currently-playing-upvote-button.active {
    color: $highlight;
  }

  .currently-playing-downvote-button.active {
    color: $red;
  }

}

